--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
                 <h1 class="text-2xl font-bold text-center text-gray-800 mb-6 transition-colors duration-300">条形码生成器</h1>
                 <div class="mb-6">
                     <label for="barcodeInput"
-                        class="block text-sm font-medium text-gray-700 mb-2 transition-colors duration-300">输入数字</label>
-                    <input type="text" id="barcodeInput"
+                        class="block text-sm font-medium text-gray-700 mb-2 transition-colors duration-300">输入数字</label>                    <input type="text" id="barcodeInput"
                         class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 focus:border-blue-500 bg-white text-gray-900 transition-colors duration-300"
-                        placeholder="请输入20位数字（支持粘贴）">
+                        placeholder="请输入数字（支持粘贴）">
                     <div class="flex justify-between items-center mt-2">
-                        <span id="digitCounter" class="text-sm text-gray-500 transition-colors duration-300">0/20</span>
+                        <span id="digitCounter" class="text-sm text-gray-500 transition-colors duration-300">0位数字</span>
                         <span id="digitStatus"
-                            class="text-sm text-red-500 transition-colors duration-300">需要输入20位数字</span>
+                            class="text-sm text-red-500 transition-colors duration-300">请输入数字</span>
                     </div>
                 </div> <!-- 颜色自定义选项 -->
                 <div class="mb-6">
